5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1664_2974.log
== TEST (2019-04-16 11:16:18) 
-- CODE:
x = float(input("digite em kg o açai: "))
x1 = float(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:59) 
-- CODE:
x = int(input("digite em kg o açai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:17:59) 
-- CODE:
x = int(input("digite em kg o açai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:11) 
-- CODE:
x = int(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:17) 
-- CODE:
x = int(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
		if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
File "XXXX", line 9
    if (x4 == x2 - x3):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:26) 
-- CODE:
x = int(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:47) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:55) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:19:07) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x1 + x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- EXECUTION TIME:
0.18122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2974/main.py", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:19:43) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:19:55) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- EXECUTION TIME:
0.158807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2974/main.py", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:06) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:20:19) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- EXECUTION TIME:
0.225663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2974/main.py", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:23) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Nao")
	
else:
	x3 = x1 + x
	print(x3)
	print("sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:01) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x1 + x
	print(x3)
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:21:11) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x1 + x
	print(x3)
	print("nao")
-- EXECUTION TIME:
0.183875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2974/main.py", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:27) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x2- (x1 + x)
	print(x3)
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:21:39) 
-- CODE:
x = float(input("digite em kg o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x2- (x1 + x)
	print(x3)
	print("Nao")
-- EXECUTION TIME:
0.11293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2974/main.py", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:11) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x2- (x1 + x)
	print(x3)
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:18) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 <= x + x1):
	x3 = x2 - x1 - x
	print(x3)
	if (x4 == x2 - x3):
		print("Sim")
	
else:
	x3 = x2- (x1 + x)
	print(x3)
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (x4 == x2 - x3):
NameError: name 'x4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:23:48) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 >= x + x1):
	x3 = x1 + x
	print(x3)
		print("Sim")
	
else:
	x3 = (x1 + x)
	print(x3)
	print("Nao")
-- ERROR:
File "XXXX", line 9
    print("Sim")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:23:57) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 >= x + x1):
	x3 = x1 + x
	print(x3)
	print("Sim")
	
else:
	x3 = (x1 + x)
	print(x3)
	print("Nao")
-- OUTPUT:
501.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:35) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x3 = x1 + x
	print(x3)
	print("Sim")
	
else:
	x3 = (x1 + x)
	print(x3)
	print("Nao")
-- OUTPUT:
501.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:21) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
-- OUTPUT:
15.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:26:31) 
-- CODE:
x = float(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
-- EXECUTION TIME:
0.153359
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:41) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
-- OUTPUT:
15.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:26:51) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
-- EXECUTION TIME:
0.212079
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:03) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
-- OUTPUT:
15.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:21) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:27:27) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
if (x2 > x + x1):
	x4 = x*y + x1*salgado
	print(x4)
	print("Nao")
	
else:
	x4 = x*y + x1*salgado
	print(x4)
	print("Sim")
-- EXECUTION TIME:
0.125394
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:50) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 > x4):
	print(x4)
	print("Sim")
	
else:
	print(x4)
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:59) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 > x4):
	print(x4)
	print("Sim")
	
else:
	print(x4)
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:29:08) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 > x4):
	print(x4)
	print("Sim")
	
else:
	print(x4)
	print("Nao")
-- EXECUTION TIME:
0.203747
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:38) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 >= x4):
	print(x4)
	print("Nao")
	
else:
	print(x4)
	print("Sim")
-- OUTPUT:
15.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:11) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 == x4):
	print(x4)
	print("Nao")
	
else:
	print(x4)
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:30:21) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 == x4):
	print(x4)
	print("Nao")
	
else:
	print(x4)
	print("Sim")
-- EXECUTION TIME:
0.150625
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:05) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 == x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:31:11) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24/1000
salgado = 3
x4 = x*y + x1*salgado
if (x2 == x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.160163
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:59) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x*/1000)*y + x1*salgado
if (x2 == x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- ERROR:
File "XXXX", line 6
    x4 = (x*/1000)*y + x1*salgado
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:20) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 == x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:32:26) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 == x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.169063
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:36) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 >= x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:48) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 <= x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:32:54) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 <= x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.160482
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:33:29) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 <= x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:33:45) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 <= x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.140038
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:33:51) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:33:56) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.142977
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:34:16) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:34:35) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.141503
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:34:55) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:35:08) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.150358
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:13) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:20) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = int(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:40) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = float(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:35:52) 
-- CODE:
x = int(input("digite em gramas o acai: "))
x1 = int(input("digite quantos salgados vc quer: "))
x2 = float(input("quanto de dinheiro: "))
y = 24
salgado = 3
x4 = (x/1000)*y + x1*salgado
if (x2 < x4):
	print(round(x4,2))
	print("Nao")
	
else:
	print(round(x4,2))
	print("Sim")
-- EXECUTION TIME:
0.173717
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
